final final commit

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
         <section id="showcase">
             <div class="container">
-                <button class="btn button-1">projects</button>
+                <!-- <button class="btn button-1">projects</button> -->
+                <a href="#projects" class="btn button-1">projects</a>
             </div>
         </section>
     </header>
@@ -53,8 +54,8 @@
             <h2>about</h2>
             <div class="about-row">
                 <div class="about-experience">
-                    <h2>experience</h2>
-                    <h4>development brothers - 2019</h4>
+                    <h2>Experience</h2>
+                    <h4>Development Brothers - 2019</h4>
                     <h4>Astrix Development - 2020</h4>
                     <h4>Creative Union - 2022</h4>
                 </div>
